--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@splidejs/react-splide": "^0.7.8",
     "axios": "^0.27.2",
     "concurrently": "^7.2.2",
     "cors": "^2.8.5",
