--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@heroku/buildpack-registry": "^1.0.1",
     "@splidejs/react-splide": "^0.7.8",
     "axios": "^0.27.2",
     "concurrently": "^7.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "heroku": "^7.60.2",
     "mongoose": "^6.4.0",
     "path": "^0.12.7",
     "puppeteer": "^15.1.1"
