--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@heroku-cli/plugin-buildpacks": "^7.60.0",
     "@heroku/buildpack-registry": "^1.0.1",
     "@splidejs/react-splide": "^0.7.8",
     "axios": "^0.27.2",
